tests/good/01_simple_int.src
# Test: Simple integer return
# Expected: 42
void main([string] args) {
    print_int(42);
}
