tests/bad/14_unclosed_string.src
# Test: Invalid string literal (unclosed)
string main([string] args) {
    return "unclosed string;  # Missing closing quote
}
